# FairFL

./: README.md  income_classifier.pth  pyproject.toml
fairnessattack/: client.py  income_classifier.pth  main.py  server.py  task.py
fairnessattack/data/: 0_test_dataset.csv  0_test_label_dataset.csv  0_train_dataset.csv  0_train_label_dataset.csv  1_test_dataset.csv  1_test_label_dataset.csv  1_train_dataset.csv  1_train_label_dataset.csv  2_test_dataset.csv  2_test_label_dataset.csv  2_train_dataset.csv  2_train_label_dataset.csv  3_test_dataset.csv  3_test_label_dataset.csv  3_train_dataset.csv  3_train_label_dataset.csv  4_test_dataset.csv  4_test_label_dataset.csv  4_train_dataset.csv  4_train_label_dataset.csv
